# LABVcnc

./: .gitignore  COPYING.more  ISSUE_TEMPLATE.md  README.md  meson.build
configs/: maintainer.txt
configs/apps/: info.demo  info.txt
configs/apps/halrun/: README  halrun.demo
configs/apps/latency/: README
configs/apps/parport/: README
configs/apps/xhc-hb04/: xhc-hb04.sh
configs/attic/dallur-thc/: README  dallur-advanced.hal  dallur-advanced.ini  dallur-core_stepper.hal
configs/attic/demo_mazak/: demo_mazak.hal  demo_mazak.ini
configs/by_interface/servotogo/: stg.ini  stg.txt  stg_io.hal
configs/by_interface/vigilant/: vti.ini  vti.txt  vti_io.hal
configs/by_interface/vitalsystems/: motenc.ini  motenc.txt  motenc_io.hal  motenc_pidtest.hal
configs/by_machine/boss/: README  boss.hal  boss.ini  pid_test.hal  pid_test.ini
configs/by_machine/cooltool/: Basic540_3axes.ini  Basic540_4axes.ini  S4_pinout.hal  Uni-cnc-set.ini  Uni-dreh-g.ini  Uni-dreh.ini  Uni-fraes-4.ini  Uni-fraes-h3.ini  Uni-fraes-v3.ini  Uni-mill-cnc.ini  core_stepper4.hal  standard_pinout.hal  standard_pinout4.hal  uni-dreh-g_pinout.hal  uni-dreh-g_stepper.hal
configs/by_machine/plasmac/: README.md  configurator.py  plasmac_axis.py  plasmac_buttons.py  plasmac_config.py  plasmac_control.py  plasmac_gcode.py  plasmac_monitor.py  plasmac_run.py  plasmac_stats.py  plasmac_wizards.py  versions.html
configs/by_machine/scorbot-er-3/: scorbot-er-3.hal  scorbot-er-3.ini
configs/by_machine/smithy/: 1034gecko.ini  1240.hal  1240.ini  1240_4axis.hal  1240_4axis.ini  1240combined.hal  1240combined.ini  1240combined_4axis.hal  1240combined_4axis.ini  1240combined_mm.ini  1240gecko.hal  1240gecko.ini  1240rutex.hal  1240rutex.ini  1240rutex_4axis.hal  1240rutex_4axis.ini  1315.hal  1315.ini  516gecko.hal  516gecko.ini  622.hal  622.ini  622_4axis.hal  622_4axis.ini  622gecko.hal  622gecko.ini  622keyence.hal  622keyence.ini  622leadshine.hal  622leadshine.ini  622leadshine_4axis.hal  622leadshine_4axis.ini  924.hal  924.ini
configs/common/: client.nml  labvcnc.nml  server.nml
configs/sim/: README  manual-example.ui
debian/: .gitignore  changelog  configure  control.bottom.in  control.top.in  control.uspace-rtai.in  control.uspace-xenomai.in  copyright  labvcnc-dev.files.in  labvcnc-doc-en.files.in  labvcnc-doc-es.files.in  labvcnc-doc-fr.files.in  labvcnc.files.in  labvcnc.postinst  labview-uspace.sharedmimeinfo  rules.in  update-dch-from-git
debian/extras/: labvcnc-doc-en.files  labvcnc-doc-fr.files  labvcnc.files
docs/: INSTALL  NEWS  README  UPDATING  asciidoc-markup.txt  rtfaults.txt  translator-needed_es.txt
docs/help/: tklinuxcnc.txt
docs/html/: .gitignore  gcode.html  gcode_fr.html  gcode_vi.html
docs/man/: .gitignore
docs/src/: Master_Developer.txt  Master_Documentation.txt  Master_Documentation_es.txt  Master_Getting_Started.txt  Master_Getting_Started_es.txt  Master_Getting_Started_fr.txt  Master_HAL_fr.txt  Master_Integrator_fr.txt  Master_User_fr.txt  Submakefile  docs.xml  emc2.sty  index.tmpl  index_es.tmpl  index_fr.tmpl
gnupg/: README  pubring.gpg
lib/hallib/: README  basic_sim.tcl  check_config.tcl  core_servo.hal  core_sim.hal  core_sim9.hal  core_stepper.hal  gantrysim.hal  hal_procs_lib.tcl  servo_sim.hal  sim_ldelta.hal  sim_lib.tcl  sim_rdelta.hal  tripodsim.hal
lib/python/: bwidget.py  gremlin_view.py  hal_glib.py  hershey.py  linuxcnc_util.py  popupkeyboard.py  propertywindow.py  pyhal.py  pyngcgui.py  pyvcp_widgets.py  vcpparse.py
nc_files/: M102.c  comp311.ngc  comp311_2.ngc  holecircle.py  plasmatest.ngc
nc_files/gcmc_lib/: cpocket.gcmc  trochoid-path.gcmc
scripts/: .gitignore  decode_dmesg  get-deb-component-from-git  get-version-from-git  githelper.sh  gladevcp_demo  hal-histogram  hal_demo  halcmd_twopass.in  halreport  halrun.in  haltcl.in  labvcnc.in  labvcnc_info  labvcnc_var.in  labvcncmkdesktop.in  latency-histogram  latency-plot  latency-test  moveoff_gui  platform-is-supported  pyvcp_demo  realtime.in  rip-environment.in  rtapi.conf.in  runtests  sim_pin  simulate_probe  swish  update_ini  version-is-release  xhc-hb04-accels
share/applications/: labvcnc-latency.desktop  labvcnc-latency.desktop.in  labvcnc.desktop  labvcnc.desktop.in
share/desktop-directories/: cnc.directory  cnc.directory.in
share/labvcnc/: .gitignore
share/menus/: CNC.menu  CNC.menu.in
src/: .vimrc  CodingStyle  Makefile  Makefile.inc.in  Makefile.modinc.in  Submakefile.skel  configure.ac  doxconfig
src/hal/: Submakefile  hal.h  hal_lib.c  hal_priv.h  halmodule.cc
src/module_helper/: Submakefile  module_helper.c  tests
src/po/: README  Submakefile  de.po  es.po  fi.po  fr.po  hu.po  it.po  ja.po  pl.po  pt_BR.po  ro.po  ru.po  sk.po  sr.po  sv.po  zh_CN.po  zh_HK.po  zh_TW.po
src/rtapi/: README  rtai_rtapi.c  rtai_ulapi.c  rtapi.h  rtapi_common.h  rtapi_proc.h  rtapi_uspace.hh  uspace_common.h  uspace_rtapi_app.cc
src/tests/: mathtest.c
tcl/: .gitignore  labvcnc.tcl.in  ngcgui.tcl  ngcgui_app.tcl  ngcgui_ttt.tcl  pkgIndex.tcl  show_errors.tcl  tklabvcnc.tcl  tooledit.tcl  twopass.tcl
tcl/scripts/: Set_Coordinates.tcl  balloon.tcl  lbvhelp.tcl
tests/: README
tests/halui/: shared-test.sh
tests/hard-limits/: hard-limits.hal  hard-limits.ini  test-ui.py  test.sh
tests/io-startup/: shared-test.sh  test-ui.py
tests/lathe/: lathe.ini  test-ui.py  test.sh
tests/linuxcncrsh/: linuxcncrsh-test.ini  test.sh
tests/linuxcncrsh-tcp/: linuxcncrsh-test.ini  tcp.nml
tests/mdi-queue/: linuxcncrsh-test.ini
tests/mdi-queue-length/: test-ui.py  test.ini
tests/mdi-while-queuebuster-waitflag/: core_sim.hal  remap.py  test-ui.py  test.ini  test.sh
tests/motion/: README
tests/rs274ngc-startup/: test-ui.py  test.ini  test.sh
tests/startup-state/: README  core_sim.hal  test-ui.py  test.ini  test.sh
tests/statbuffer-g5x-abort/: test-ui.py  test.ini
tests/t0/: shared-test.sh
tests/tclsh-extensions/: test.sh  test.tcl
tests/tlo/: g43-test.ini  mod_core_sim.hal  test-ui.py  test.sh
tests/toolchanger/: README
unit_tests/: catch.hpp  greatest.h
(+1502 files in other folders)
